tests/rosetta/out/Haskell/catalan-numbers-2.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/catalan-numbers-2.hs:112:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/catalan-numbers-2.hs:107:1
                 /workspace/mochi/tests/rosetta/out/Haskell/catalan-numbers-2.hs:112:1
    |
112 | main = do
    | ^^^^
